# LeftWrite

./: .clang-format  README.md  leftwrite.hpp  shell.nix
benchmarks/: CMakeLists.txt  bench.cpp
